--- a/templates/VP/panels.html
+++ b/templates/VP/panels.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container py-5">
-    <h1 class="text-center mb-5 glow-text">EXECUTIVE PANELS</h1>
+    <h1 class="text-center mb-5 glow-text">PANELS INFORMATION</h1>
     
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         {% for panel in panels %}
